--- a/reach_batch/Rakefile
+++ b/reach_batch/Rakefile
@@ -7,6 +7,6 @@ task :default => :test
 desc 'Run unit tests'
 Rake::TestTask.new(:test) do |t|
    t.libs << 'app'
-   t.pattern = 'test/**/test_*.rb'
+   t.pattern = 'test/**/*_test.rb'
    t.verbose = true
 end
