refactored the client a bit. added some more tests around pulling in all historic data... trying to get a good grasp on mocha

--- a/reach_batch/Rakefile
+++ b/reach_batch/Rakefile
@@ -6,7 +6,17 @@ task :default => :test
 
 desc 'Run unit tests'
 Rake::TestTask.new(:test) do |t|
-   t.libs << 'app'
+   t.libs << 'app' << 'test'
    t.pattern = 'test/**/*_test.rb'
    t.verbose = true
+end
+
+desc "Run batch job"
+task :run_batch_job do
+   sh "ruby -Iapp app/batch_job.rb"
+end
+
+desc "Run update job"
+task :run_update_job do
+   sh "ruby -Iapp app/update_job.rb"
 end
