created a service_tag_provider to provide all the service tags of the players that we care about

--- a/reach_batch/Rakefile
+++ b/reach_batch/Rakefile
@@ -21,11 +21,12 @@ end
 
 desc "Run batch job"
 task :run_batch_job do
-   environemnt(:prod)
+   environment(:prod)
    sh "ruby -Iapp app/batch_job.rb"
 end
 
 desc "Run update job"
 task :run_update_job do
+   environment(:prod)
    sh "ruby -Iapp app/update_job.rb"
 end
