--- a/reach_batch/config/prod.yml
+++ b/reach_batch/config/prod.yml
@@ -1,4 +1,7 @@
-adapter: mysql
-database: reach
-user: root
-password: root
+#adapter: mysql
+#database: reach
+#user: root
+#password: root
+
+adapter: sqlite3
+database: db/prod.db
