created a home page that links to a page that lists the average deaths

--- a/reach_web/config/database.yml
+++ b/reach_web/config/database.yml
@@ -2,7 +2,7 @@
 #   gem install sqlite3
 development:
   adapter: sqlite3
-  database: db/development.sqlite3
+  database: db/prod.db
   pool: 5
   timeout: 5000
 
