moved some stuff around... tests all pass but had to put some test helper classes in with the prod code or rakefile wouldn't pick it up... odd

--- a/reach_web/Rakefile
+++ b/reach_web/Rakefile
@@ -5,3 +5,22 @@ require File.expand_path('../config/application', __FILE__)
 require 'rake'
 
 ReachWeb::Application.load_tasks
+
+
+def environment(env)
+   ActiveRecord::Base.establish_connection(YAML::load(File.open("config/#{env}.yml")))   
+   ActiveRecord::Migrator.migrate("db/migrate")
+end
+
+desc "Run batch job"
+task :run_batch_job do
+   environment(:prod)
+   sh "ruby -Ilib lib/batch_job.rb"
+end
+
+desc "Run update job"
+task :run_update_job do
+   environment(:prod)
+   sh "ruby -Ilib lib/update_job.rb"
+end
+
