--- a/reach_web/config/database.yml
+++ b/reach_web/config/database.yml
@@ -11,12 +11,12 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: sqlite3
-  database: db/test.sqlite3
+  database: db/test.db
   pool: 5
   timeout: 5000
 
 production:
   adapter: sqlite3
-  database: db/production.sqlite3
+  database: db/prod.db
   pool: 5
   timeout: 5000
